--- a/notebooks/laboratorio-01.ipynb
+++ b/notebooks/laboratorio-01.ipynb
@@ -13806,11 +13806,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Laboratorio completado con éxito!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"¡Laboratorio completado con éxito!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luis"
    ]
   }
  ],
