Generación de datos

--- a/notebooks/laboratorio-01.ipynb
+++ b/notebooks/laboratorio-01.ipynb
@@ -74,6 +74,143 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creación de un dataframe:\n",
+    "{'':[]} # Estructura básica de un diccionario 'vacío'\n",
+    "# DataFrame requiere entre tando de un argumento que se llama data, que se encarga de crear una tabla (dataframe)\n",
+    "pd.DataFrame(data=)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista = [10,98,76,54,32,1]\n",
+    "\n",
+    "lista[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicc = {'primero':[10,20,30],\n",
+    "        'segundo':[98,87,76],\n",
+    "        'tercero':[76,65,54]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>primero</th>\n",
+       "      <th>segundo</th>\n",
+       "      <th>tercero</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>98</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20</td>\n",
+       "      <td>87</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30</td>\n",
+       "      <td>76</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   primero  segundo  tercero\n",
+       "0       10       98       76\n",
+       "1       20       87       65\n",
+       "2       30       76       54"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Opcion: 3f, 2c\n",
+    "# Opcion: 2f, 3c\n",
+    "pd.DataFrame(data=dicc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dicc['primero']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -89,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -11222,7 +11359,7 @@
        " ...]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11233,7 +11370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -11406,7 +11543,7 @@
        "4             1391.801439  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11424,6 +11561,349 @@
     "# Mostramos las primeras filas para verificar\n",
     "print(\"Vista previa de los datos generados:\")\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guardado en formato CSV (Comma Separated Values)\n",
+    "df.to_csv('datos_petroleros_generados.csv',index=None)\n",
+    "# Guardado en formato TSV (Tabular Separated Values)\n",
+    "df.to_csv('datos_petroleros_generados.tsv',index=None,sep='\\t')\n",
+    "# Guardado en formato CSV (Comma Separated Values) sin encabezado\n",
+    "df.to_csv('datos_petroleros_generados_sin_header.csv',index=None,header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>POZO-A</td>\n",
+       "      <td>CAMPO-A</td>\n",
+       "      <td>1259.605698</td>\n",
+       "      <td>1491.465814</td>\n",
+       "      <td>203.916905</td>\n",
+       "      <td>1791.928342</td>\n",
+       "      <td>793.077201</td>\n",
+       "      <td>82.209703</td>\n",
+       "      <td>42.009378</td>\n",
+       "      <td>23.534629</td>\n",
+       "      <td>1463.522603</td>\n",
+       "      <td>0.139333</td>\n",
+       "      <td>1.184074</td>\n",
+       "      <td>1508.183334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>POZO-A</td>\n",
+       "      <td>CAMPO-A</td>\n",
+       "      <td>1181.730032</td>\n",
+       "      <td>1429.280662</td>\n",
+       "      <td>180.654841</td>\n",
+       "      <td>1807.663519</td>\n",
+       "      <td>738.785088</td>\n",
+       "      <td>74.599645</td>\n",
+       "      <td>52.310863</td>\n",
+       "      <td>20.364252</td>\n",
+       "      <td>1362.384872</td>\n",
+       "      <td>0.132602</td>\n",
+       "      <td>1.209482</td>\n",
+       "      <td>1419.943476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>POZO-A</td>\n",
+       "      <td>CAMPO-A</td>\n",
+       "      <td>1274.368468</td>\n",
+       "      <td>1529.871781</td>\n",
+       "      <td>208.609894</td>\n",
+       "      <td>1599.779932</td>\n",
+       "      <td>789.548837</td>\n",
+       "      <td>87.157927</td>\n",
+       "      <td>60.121548</td>\n",
+       "      <td>23.003376</td>\n",
+       "      <td>1482.978362</td>\n",
+       "      <td>0.140670</td>\n",
+       "      <td>1.200494</td>\n",
+       "      <td>1529.347098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>POZO-A</td>\n",
+       "      <td>CAMPO-A</td>\n",
+       "      <td>1377.735865</td>\n",
+       "      <td>1658.166842</td>\n",
+       "      <td>166.615958</td>\n",
+       "      <td>1891.032767</td>\n",
+       "      <td>757.473977</td>\n",
+       "      <td>79.661918</td>\n",
+       "      <td>43.184130</td>\n",
+       "      <td>23.327821</td>\n",
+       "      <td>1544.351822</td>\n",
+       "      <td>0.107887</td>\n",
+       "      <td>1.203545</td>\n",
+       "      <td>1654.097005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>POZO-A</td>\n",
+       "      <td>CAMPO-A</td>\n",
+       "      <td>1165.202656</td>\n",
+       "      <td>1359.592698</td>\n",
+       "      <td>221.473781</td>\n",
+       "      <td>1833.848848</td>\n",
+       "      <td>770.973828</td>\n",
+       "      <td>80.300655</td>\n",
+       "      <td>50.948531</td>\n",
+       "      <td>23.924270</td>\n",
+       "      <td>1386.676437</td>\n",
+       "      <td>0.159716</td>\n",
+       "      <td>1.166829</td>\n",
+       "      <td>1391.801439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1820</th>\n",
+       "      <td>2022-12-27</td>\n",
+       "      <td>POZO-E</td>\n",
+       "      <td>CAMPO-E</td>\n",
+       "      <td>440.849855</td>\n",
+       "      <td>291.937633</td>\n",
+       "      <td>818.083224</td>\n",
+       "      <td>1642.742741</td>\n",
+       "      <td>838.353134</td>\n",
+       "      <td>81.196673</td>\n",
+       "      <td>43.749872</td>\n",
+       "      <td>23.862391</td>\n",
+       "      <td>1258.933079</td>\n",
+       "      <td>0.649823</td>\n",
+       "      <td>0.662216</td>\n",
+       "      <td>489.506127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1821</th>\n",
+       "      <td>2022-12-28</td>\n",
+       "      <td>POZO-E</td>\n",
+       "      <td>CAMPO-E</td>\n",
+       "      <td>531.506085</td>\n",
+       "      <td>355.327489</td>\n",
+       "      <td>819.811081</td>\n",
+       "      <td>1788.790912</td>\n",
+       "      <td>826.899184</td>\n",
+       "      <td>83.126305</td>\n",
+       "      <td>51.528506</td>\n",
+       "      <td>21.382379</td>\n",
+       "      <td>1351.317166</td>\n",
+       "      <td>0.606676</td>\n",
+       "      <td>0.668529</td>\n",
+       "      <td>590.727333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1822</th>\n",
+       "      <td>2022-12-29</td>\n",
+       "      <td>POZO-E</td>\n",
+       "      <td>CAMPO-E</td>\n",
+       "      <td>617.516104</td>\n",
+       "      <td>394.932310</td>\n",
+       "      <td>758.630426</td>\n",
+       "      <td>1713.151216</td>\n",
+       "      <td>835.892311</td>\n",
+       "      <td>83.213985</td>\n",
+       "      <td>52.757183</td>\n",
+       "      <td>23.449713</td>\n",
+       "      <td>1376.146530</td>\n",
+       "      <td>0.551272</td>\n",
+       "      <td>0.639550</td>\n",
+       "      <td>683.338156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1823</th>\n",
+       "      <td>2022-12-30</td>\n",
+       "      <td>POZO-E</td>\n",
+       "      <td>CAMPO-E</td>\n",
+       "      <td>475.409235</td>\n",
+       "      <td>364.584376</td>\n",
+       "      <td>791.915867</td>\n",
+       "      <td>1730.756765</td>\n",
+       "      <td>867.549695</td>\n",
+       "      <td>75.258164</td>\n",
+       "      <td>53.629106</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>1267.325102</td>\n",
+       "      <td>0.624872</td>\n",
+       "      <td>0.766885</td>\n",
+       "      <td>536.173298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1824</th>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>POZO-E</td>\n",
+       "      <td>CAMPO-E</td>\n",
+       "      <td>515.637717</td>\n",
+       "      <td>346.543322</td>\n",
+       "      <td>693.836803</td>\n",
+       "      <td>1836.137984</td>\n",
+       "      <td>844.181227</td>\n",
+       "      <td>80.912354</td>\n",
+       "      <td>51.746464</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>1209.474520</td>\n",
+       "      <td>0.573668</td>\n",
+       "      <td>0.672067</td>\n",
+       "      <td>573.394937</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1825 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              0       1        2            3            4           5   \\\n",
+       "0     2022-01-01  POZO-A  CAMPO-A  1259.605698  1491.465814  203.916905   \n",
+       "1     2022-01-02  POZO-A  CAMPO-A  1181.730032  1429.280662  180.654841   \n",
+       "2     2022-01-03  POZO-A  CAMPO-A  1274.368468  1529.871781  208.609894   \n",
+       "3     2022-01-04  POZO-A  CAMPO-A  1377.735865  1658.166842  166.615958   \n",
+       "4     2022-01-05  POZO-A  CAMPO-A  1165.202656  1359.592698  221.473781   \n",
+       "...          ...     ...      ...          ...          ...         ...   \n",
+       "1820  2022-12-27  POZO-E  CAMPO-E   440.849855   291.937633  818.083224   \n",
+       "1821  2022-12-28  POZO-E  CAMPO-E   531.506085   355.327489  819.811081   \n",
+       "1822  2022-12-29  POZO-E  CAMPO-E   617.516104   394.932310  758.630426   \n",
+       "1823  2022-12-30  POZO-E  CAMPO-E   475.409235   364.584376  791.915867   \n",
+       "1824  2022-12-31  POZO-E  CAMPO-E   515.637717   346.543322  693.836803   \n",
+       "\n",
+       "               6           7          8          9          10           11  \\\n",
+       "0     1791.928342  793.077201  82.209703  42.009378  23.534629  1463.522603   \n",
+       "1     1807.663519  738.785088  74.599645  52.310863  20.364252  1362.384872   \n",
+       "2     1599.779932  789.548837  87.157927  60.121548  23.003376  1482.978362   \n",
+       "3     1891.032767  757.473977  79.661918  43.184130  23.327821  1544.351822   \n",
+       "4     1833.848848  770.973828  80.300655  50.948531  23.924270  1386.676437   \n",
+       "...           ...         ...        ...        ...        ...          ...   \n",
+       "1820  1642.742741  838.353134  81.196673  43.749872  23.862391  1258.933079   \n",
+       "1821  1788.790912  826.899184  83.126305  51.528506  21.382379  1351.317166   \n",
+       "1822  1713.151216  835.892311  83.213985  52.757183  23.449713  1376.146530   \n",
+       "1823  1730.756765  867.549695  75.258164  53.629106  24.000000  1267.325102   \n",
+       "1824  1836.137984  844.181227  80.912354  51.746464  24.000000  1209.474520   \n",
+       "\n",
+       "            12        13           14  \n",
+       "0     0.139333  1.184074  1508.183334  \n",
+       "1     0.132602  1.209482  1419.943476  \n",
+       "2     0.140670  1.200494  1529.347098  \n",
+       "3     0.107887  1.203545  1654.097005  \n",
+       "4     0.159716  1.166829  1391.801439  \n",
+       "...        ...       ...          ...  \n",
+       "1820  0.649823  0.662216   489.506127  \n",
+       "1821  0.606676  0.668529   590.727333  \n",
+       "1822  0.551272  0.639550   683.338156  \n",
+       "1823  0.624872  0.766885   536.173298  \n",
+       "1824  0.573668  0.672067   573.394937  \n",
+       "\n",
+       "[1825 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Carga de datos en formato CSV\n",
+    "pd.read_csv('datos_petroleros_generados.csv')\n",
+    "# Carga de datos en formato TSV\n",
+    "pd.read_csv('datos_petroleros_generados.tsv',sep='\\t')\n",
+    "# Carga de datos en formato CSV sin header\n",
+    "pd.read_csv('datos_petroleros_generados_sin_header.csv',header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['fecha', 'pozo', 'campo', 'petroleo_bbl', 'gas_mscf', 'agua_bbl',\n",
+       "       'presion_cabezal_psi', 'presion_linea_psi', 'temperatura_c',\n",
+       "       'choke_percent', 'horas_operativas', 'liquido_total', 'corte_agua',\n",
+       "       'gas_petroleo_ratio', 'produccion_equivalente'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Visualización de columnas\n",
+    "df.columns"
    ]
   },
   {
